@@ -1,11 +1,11 @@
-package org.jax.svanna.ingest.parse.enhancer;
+package org.jax.svanna.ingest.parse;
 
-import org.jax.svanna.ingest.parse.RepetitiveRegionParser;
 import org.jax.svanna.model.landscape.repeat.RepetitiveRegion;
 import org.junit.jupiter.api.Test;
-import org.monarchinitiative.svart.GenomicAssemblies;
+import org.monarchinitiative.svart.assembly.GenomicAssemblies;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -13,7 +13,7 @@ import static org.hamcrest.Matchers.hasSize;
 
 public class RepetitiveRegionParserTest {
 
-    private static final Path testFilePath = Path.of(RepetitiveRegionParserTest.class.getResource("/repeats/hg38.fa.out.10lines.gz").getPath());
+    private static final Path testFilePath = Paths.get("src/test/resources/repeats/hg38.fa.out.10lines.gz");
 
     @Test
     public void parse() throws Exception {
